added groupcard and iconbutton

--- a/src/main.scss
+++ b/src/main.scss
@@ -28,4 +28,7 @@
 "components/toolbar/toolbar",
 "components/tabs/tabs",
 "components/list/list",
-"components/whiteframe/whiteframe";
+"components/whiteframe/whiteframe",
+"components/groupcard/groupcard",
+"components/iconbutton/iconbutton"
+;
