refinements of groupcard

--- a/src/main.scss
+++ b/src/main.scss
@@ -30,5 +30,6 @@
 "components/list/list",
 "components/whiteframe/whiteframe",
 "components/groupcard/groupcard",
-"components/iconbutton/iconbutton"
+"components/iconbutton/iconbutton",
+"components/customform/customform"
 ;
