--- a/src/components/groupcard/_groupcard.scss
+++ b/src/components/groupcard/_groupcard.scss
@@ -7,6 +7,8 @@ material-groupcard {
 
   border-radius: $card-border-radius;
 
+  background-color: lightgreen;
+
   .material-groupcard-image {
     min-width: 100%;
     @include calc(width, "100% + #{$card-padding}*2");
@@ -29,8 +31,29 @@ material-groupcard.active {
   overflow: auto;
 }
 
-.groupcardHotspot {
-  cursor: pointer;
+.lightDetails {
+  opacity: 0.4;
+  margin-bottom: 10px;
+}
+
+.groupCount {
+  float: right;
+  vertical-align: top;
+}
+
+.clearBoth {
+  clear: both;
+}
+
+div .groupCardMenuBar {
+  background-color: rgba(0,0,0,0.3);
+  min-height: 28px;
+  margin: -10px;
+  padding: 5px;
+}
+
+.overflowMenuButton {
+  float: right;
 }
 
 .face {
